<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/very_lightly_pink"
    tools:context=".loginActivity">




    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="221dp"
        android:layout_gravity="center"
        />

    <EditText
        android:id="@+id/Opassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_fields"
        android:hint="@string/Old"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="8dp"
        android:padding="10dp" />

    <EditText
        android:id="@+id/Npassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_fields"
        android:hint="@string/neww"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:inputType="textPassword"
        android:layout_marginBottom="8dp"
        android:padding="10dp" />

    <Button
        android:id="@+id/EditP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@color/orange"
        android:layout_marginTop="20dp"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/forgott_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"

        android:text="@string/ForgotPassword"
        android:clickable="true"
        android:textColor="@color/dark_blue"
        android:textSize="14sp" />


</LinearLayout>
