<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterActivity"
    android:background="@color/very_lightly_pink">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginBottom="32dp"
            android:background="@color/orange"
            android:elevation="4dp"

            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"

            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">


            <TextView
                android:id="@+id/me"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="View Request"
                android:textColor="@color/black"
                android:textSize="40sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="5dp" />

        </androidx.appcompat.widget.Toolbar>



        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:textColorHint="@android:color/darker_gray"
            android:maxLines="1"

            android:textColor="#000000"
            android:textSize="22sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="8dp"
            android:padding="15dp"/>
        <TextView
            android:id="@+id/Location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location"

            android:textColorHint="@android:color/darker_gray"

            android:maxLines="1"
            android:textColor="#000000"
            android:textSize="22sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="8dp"
            android:padding="15dp"/>



        <TextView
            android:id="@+id/automobile"
            android:layout_width="match_parent"

            android:maxLines="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/automob"


            android:textColorHint="@android:color/darker_gray"

            android:textColor="#000000"
            android:textSize="22sp"
            android:layout_marginBottom="15dp"
            android:padding="15dp"/>

        <TextView
            android:id="@+id/problem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="15dp"

            android:hint="@string/problem"

            android:maxLines="10"
            android:padding="15dp"
            android:textColor="#000000"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="22sp" />


        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="ACCEPT"
            android:textSize="16dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="15dp"
            android:background="@color/white"/>
        <Button
            android:id="@+id/reject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="REJECT"
            android:textSize="16dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@color/white"/>
        <TextView
            android:id="@+id/latt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="15dp"
            android:visibility="invisible"
            android:hint="wait for user to send location"
            android:maxLines="10"
            android:padding="15dp"
            android:textColor="#000000"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="22sp" />


        <ImageView
            android:id="@+id/myinvisible"
            android:layout_width="12sp"
            android:layout_height="12sp"
            android:layout_gravity="center"
            android:text="SUBMIT"
            android:textSize="16dp"
            android:src="@drawable/profile"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:visibility="invisible" />


    </LinearLayout>
</ScrollView>
