<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/very_lightly_pink"
    tools:context=".ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="32dp"
        android:background="@color/orange"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:contentInsetStart="10dp"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request"
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="5dp" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/very_lightly_pink"
        android:fillViewport="true"
        android:overScrollMode="ifContentScrolls"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/garageImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"

                android:scaleType="centerCrop"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:src="@drawable/garagedefa"
                android:layout_marginEnd="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Garage Name"
                android:textSize="24sp"
                android:fontFamily="@font/aclonica"
                android:layout_marginTop="30dp"
                map:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="5dp"
                android:textColor="@color/black"
                android:layout_marginEnd="5dp"
                map:layout_constraintTop_toBottomOf="@+id/garageImage"
                map:layout_constraintBottom_toTopOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Garage Company"
                android:textSize="22sp"
                android:fontFamily="@font/aclonica"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                map:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="5dp"

                android:layout_marginEnd="5dp"
                map:layout_constraintTop_toBottomOf="@+id/textView3"
                map:layout_constraintBottom_toTopOf="@+id/textView5" />
            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Location"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:fontFamily="@font/aclonica"
                android:layout_marginTop="10dp"
                map:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="5dp"

                android:layout_marginEnd="5dp"
                map:layout_constraintTop_toBottomOf="@+id/textView4"
                map:layout_constraintBottom_toTopOf="@+id/textView6" />
            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Description"
                android:textSize="18sp"
                android:textColor="@color/dark_blue"
                android:fontFamily="@font/chango"
                android:layout_marginTop="10dp"
                map:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="5dp"

                android:layout_marginEnd="5dp"
                map:layout_constraintTop_toBottomOf="@+id/textView5"
                map:layout_constraintBottom_toTopOf="@+id/textView5" />
            <Button
                android:id="@+id/direct"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/buttons"
                android:text="@string/directCall"
                android:drawableTop="@drawable/direct_call1"
                map:layout_constraintBottom_toTopOf="@+id/whatsapp"
                map:layout_constraintEnd_toEndOf="parent"
                map:layout_constraintStart_toEndOf="@+id/requesting"
                map:layout_constraintTop_toBottomOf="@+id/textView6" />
            <Button
                android:id="@+id/requesting"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/buttons"
                android:text="@string/directReq"
                android:drawableTop="@drawable/request1"
                map:layout_constraintBottom_toTopOf="@+id/messagee"
                map:layout_constraintEnd_toStartOf="@+id/direct"
                map:layout_constraintStart_toStartOf="parent"
                map:layout_constraintTop_toBottomOf="@+id/textView6" />

            <Button
                android:id="@+id/messagee"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/buttons"
                android:drawableTop="@drawable/messages"
                android:text="@string/message"
                map:layout_constraintBottom_toBottomOf="parent"

                map:layout_constraintEnd_toStartOf="@+id/whatsapp"
                map:layout_constraintStart_toStartOf="parent"
                map:layout_constraintTop_toBottomOf="@+id/requesting" />

            <Button
                android:id="@+id/whatsapp"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/buttons"
                android:drawableTop="@drawable/whatsapp"
                android:text="Whatsapp"

                map:layout_constraintBottom_toBottomOf="parent"
                map:layout_constraintEnd_toEndOf="parent"
                map:layout_constraintStart_toEndOf="@+id/messagee"
                map:layout_constraintTop_toBottomOf="@+id/direct" />
            <!-- Rest of your views inside the ScrollView -->

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:addStatesFromChildren="true"
        android:animateLayoutChanges="true"
        android:background="@color/orange"
        android:clickable="true"
        android:contextClickable="true"
        android:duplicateParentState="false"
        android:focusable="auto"
        app:itemIconTint="@drawable/bottom_navigation_selector"
        app:itemTextColor="@drawable/bottom_navigation_selector"
        app:menu="@menu/bottom_navigation_menu"
        map:labelVisibilityMode="labeled"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
